Add secret into flux-system namespace

--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -5,17 +5,16 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:KWd1pTdycXkW,iv:bG8kTriZSb0C3tJADtFyciWQiROzNTP4sFtAOHzOl+Y=,tag:+DzHJUcMGJONj5+eFaNkyA==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:kJWxd8NTr7Vc,iv:rvZYykTek39JJ6B0LgbEEKesff+CJmKZiEzY+LleMUo=,tag:ojX+yddU0V2Ryg1sOQz5fg==,type:str]
     SECRET_CLOUDFLARE_EMAIL: null
-    NFS_SERVER: ENC[AES256_GCM,data:P2q+JPcmLDDwnAizyOs=,iv:YZxMMQOFZO1FU6FLCTP+kSY9vM9d7L3GK+WVn7x1rjg=,tag:LIBwlxZAmMcnu2sfFk7POQ==,type:str]
-    NFS_PATH: ENC[AES256_GCM,data:E699/ZzoUbustpTdA7ZCbA==,iv:7C+W4lG7MSKCw1qjDeSP2g0COXKHDxrIHkIjy0C0iec=,tag:F6T/rv9rPXpXRnS1LZvMGw==,type:str]
-    PIHOLE_SERVER: ENC[AES256_GCM,data:PQkj3Q60KsZNHOTVVBM=,iv:v6Yf6H7aQd4AHH8PXcPyWtB4psEINgRLNbqQkfap+y8=,tag:EyZcxN6rKyXL9Uh2A6xNBQ==,type:str]
-    HOME_ASSISTANT_SERVER: ENC[AES256_GCM,data:D5q99z33VEGT6mHJ9w==,iv:N2DFYiDgScf4QbmUbU0aO5decgk103ZJLfbJVv+UNIU=,tag:zyEU4+O1pMPZ6/lz4OkdRQ==,type:str]
-    GATEWAY_ADDR: ENC[AES256_GCM,data:JjN1xvoZGkKzjYBmOQ==,iv:xY08dtVTYLEOgdJzxQAhmd5QWz8iRbFKZNQtrKKLsBQ=,tag:WbGE18KwnVQ9JuISGz5jyw==,type:str]
-    HOME_ASSISTANT_BEARER: ENC[AES256_GCM,data:udCGJR2yiyPBBwoDGc271icJb7EQN7sSk6Kg+IzdMdg3C8VA2IJ4z9vYimUStZ9rYFS3uOt4i4A+MCHrpiW/MJUSeDe+MGBtth+8iN3Gdw/5aH3cJzsLDAahx1qCGmYeeE4an3lL6mqF0K0xFJ/uQ5MYbG3MPQcpSxa8X4hmE4njJA/oIEcCyt9Ocm38zYNQgps8jCyOGtTE4nVUQGAlVzapd0/2I0d7aQQhxi1hxfgYoRoLwLx1,iv:g73wr1OIGntylE/4567QgAdWI8bcMtb3RVT5aWlg/Fg=,tag:rfVwAjSmf6xHn4Veqm+6AA==,type:str]
-    SECRET_GRAFANA_ADMIN_USER: ENC[AES256_GCM,data:Apr43H8=,iv:ZeqxjQZ2Y7gqQG97g5+bJK1FOEhsLj+hOZJKVDKubZ4=,tag:Uer32fVz+0EberPwJ7GjVA==,type:str]
-    SECRET_GRAFANA_ADMIN_PASSWORD: ENC[AES256_GCM,data:qE0DdfTF578UIEVgfXbiBA==,iv:7fMa3F/nZUlmwERrLXYa2cQ8h7vmPCnuXLGPVRm/8E8=,tag:MR1OKmtpKW5BIYjt3b9wEg==,type:str]
-    SECRET_ALERT_MANAGER_DISCORD_WEBHOOK: ENC[AES256_GCM,data:PNKTDIjFmkvxtfKWaECsoVGZbw+baf7fnL9HEjnEkjULSagQVYaWZEiexWyVMY8r93X5+6y8RpJcqL7snnppDOzFQBFwR7sEBIGqhxBwNQL/n8diwNLXRKaBdTWO0kHy1V84TjiHj6OM56sSpe25cyX4TFYJqjor,iv:c66TipKEA2mJ5sGfaHXvhsbiEVcdF/Cj5fKM8mTmp5c=,tag:hvcYOL7lWSiclRmoy8Bbxw==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:8lOEa9VNOE3i7OXvcs4=,iv:GhODJXygCdQEKziiQcAuK0RWmWF140L1ZcH+wH/jNEI=,tag:bqZs09oKcrlYIlrk0dN9xg==,type:str]
+    NFS_PATH: ENC[AES256_GCM,data:X7yRKA+wvcqjNcYP7bP4rA==,iv:8ucpCOFV9lGrHPuqYEdYVtU0zPfwX+9qCuWp0efojEU=,tag:Cq35sg2bfTQ/YFOwWi+Ktg==,type:str]
+    PIHOLE_SERVER: ENC[AES256_GCM,data:mDNxq8xvmx+2Kkt9ykY=,iv:g+kP+RhF5tg5bYs+Mpy821uHIGMCzW8eNMf9ldcZc1Q=,tag:QUbArJ0ADZT2+SniG/uikw==,type:str]
+    HOME_ASSISTANT_SERVER: ENC[AES256_GCM,data:h5XuDtipBU+0N3N3rQ==,iv:/jgPgv1AkP5mx2iOaMCMIa5/y+nOYU3uqdHmHknurQM=,tag:+b772EeET6EaGx2r3SncFg==,type:str]
+    GATEWAY_ADDR: ENC[AES256_GCM,data:X0PImKWP94tOYjp8PQ==,iv:WL2h1MmltfP3X+Bbwr9QXFVvcwCm5UZbnzXX1jFTdrA=,tag:iOalNP/51XI1Fj1FZMsOlg==,type:str]
+    HOME_ASSISTANT_BEARER: ENC[AES256_GCM,data:J5TqUgGZDq1WZL7gg/iSEVdakOMvVySxIEypLF+PDZe+Hu42MekxMLFeoeJ0telr27G0OywgZmJS0f2FeISkogRH313qdt9Jx/QXofB6b68Ez/aqiktVh2cxfomKg0LKhXEydgHBWcLMiMaG2WrrAphfBBbUAHPJsInN5Oe+jXyIH53fIovCqmu7Ci4N00TOaMUJVMilvBzcWgLbxfZNdW5LdKRCK9Y1I6hKI6SUwJ6+5YGct+J4,iv:zwmu9fpTNlxQJptVJSL+9Go1OExGedyGwtwL7nGO/Fc=,tag:R92X1CF7KGfyKSdiEnF5xQ==,type:str]
+    SECRET_GRAFANA_ADMIN_USER: ENC[AES256_GCM,data:FnzZFDs=,iv:qyGtnoSMXunkWCvkusvfIRWuPnMKk+9tzvlhjvO5Ekc=,tag:5zFVTWZbQEwApWbQkx0Mcw==,type:str]
+    SECRET_GRAFANA_ADMIN_PASSWORD: ENC[AES256_GCM,data:y20ITMI7K2vWmH8QAZNakw==,iv:YCzUA+Owp7bUBU1hFAdwvj/V1hQkGvfFyAbS0zkgzrY=,tag:dcZuu6vwRTqiIyTvhTUBhg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -25,14 +24,14 @@ sops:
         - recipient: age1hra9lsurxkx96y9vgckl38ct3x4nkq655nnmfpe2xly93kqypqps0yhwmc
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB4UDJoY1RIdTBQajRrM0Vx
-            WC9XTnFpck1lTTZ5eCtuMmE4MVJvOWNpeGdRCkZ0ZFRoRXdFRFlKM1NCN2VIOVZk
-            VFVLVCtBSDhQcWRjaEpXc21OU0tEOTAKLS0tIDB3N3VQWFY0MjNzYk9mRkFRTG9T
-            VlUyeFVDc0RXNzdaN1BscjM2aDNJSnMKHJVRvixrCmZA5WeS+h2KM8ojDG+K8k5J
-            KCJ1R4qXdk0L4PjJk56un7pD2klCWqmapSS5DuBIYu5cYP7vpnJHPA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBoRnVBbk9PbTJnSlQreTJ2
+            OXN2dUt3bFIySkhJUTRYcjVmbWRjVmFRaXlrCkFENHlhbUhRQllMMXBPeWpLRkpO
+            YVJuNkxUMmp6eGNYSy90Wm1ET1JHYmMKLS0tIFkwNEw1dEVGNDJ3NjFvOGpvSXU1
+            TmZrVmVVNnZJR21aRWZ3azlmWlpWc0EKO1MT/AhANHKEg29FhjMaeSZP2Ts+YSgQ
+            O2tbnKiyFqO97empvBTLELiRu3lBGs7Ku5Uh22UTJz10uaOkCZ8z5w==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2021-12-05T17:35:14Z"
-    mac: ENC[AES256_GCM,data:IsXnwkiZDz4fqQ16cy8tvuZVeTPZJQI9a2yETD92Uy43eRdaekY1SK8YoqUlDGZI1XjX86ZQ+KBwZV9dKez+3AjLORivM9o3eCDp1KE0OKipheM5DXibZpqs68yfDUuHgRHk4x2pmlFPapBDfJ/uCc8ugvtJnUiOgY85BYa4eus=,iv:iVjOov1W8dsDe32RRAANcFQ9Xxub15OtSD8PHlHWd6Y=,tag:0HRCBCfBBtMDyAeJFLC69A==,type:str]
+    lastmodified: "2021-12-05T17:39:05Z"
+    mac: ENC[AES256_GCM,data:Yk0yimzF2nP/N5hvY/ITyiS1PAdRR0dtS1Y1ShlvJY+gojesJn7KMqBmZpVvzSRPoL6uoT4h/mKBFgsIaQ0aJ7cDlwpNmitr4aNuDGE1Q3oN8jlrjo0YIagionN3ocW50G32Epoxvv8qUXEulb0cXomuU4dGM3raGi9jwlTkpsE=,iv:MGcLtEjJmzDRYYQIWGahwDYUNRIoo2gkLwSyxvhUT5E=,tag:/eAcX25CSxF/8wa0XVYpkg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
