--- a/cluster/base/flux-system/kustomization.yaml
+++ b/cluster/base/flux-system/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 resources:
   - gotk-components.yaml
   - gotk-sync.yaml
-  - webhook-secret.yaml
+  - webhook-secret.sops.yaml
   - alert-provider.yaml
   - flux-alert.yaml
   - ./charts/helm/metallb-charts.yaml
