Add username and channel to provider

--- a/cluster/base/flux-system/alert-provider.yaml
+++ b/cluster/base/flux-system/alert-provider.yaml
@@ -5,5 +5,7 @@ metadata:
   namespace: flux-system
 spec:
   type: discord
+  username: Prometheus
+  channel: "#monitoring"
   secretRef:
     name: webhook-secret
