--- a/cluster/apps/monitoring/grafana/helm-release.yaml
+++ b/cluster/apps/monitoring/grafana/helm-release.yaml
@@ -49,7 +49,7 @@ spec:
         org_id: 1
         org_role: Viewer
       auth.ldap:
-        enabled: true
+        enabled: false
         allow_sign_up: true
         config_file: /etc/grafana/ldap.toml        
       security:
@@ -59,7 +59,7 @@ spec:
       userKey: GRAFANA_ADMIN_USER
       passwordKey: GRAFANA_ADMIN_PASSWORD
     ldap:
-      enabled: true
+      enabled: false
       # `existingSecret` is a reference to an existing secret containing the ldap configuration
       # for Grafana in a key `ldap-toml`.
       existingSecret: "grafana-ldap-toml"      
