Change severity to error

--- a/cluster/base/flux-system/flux-alert.yaml
+++ b/cluster/base/flux-system/flux-alert.yaml
@@ -6,7 +6,8 @@ metadata:
 spec:
   providerRef:
     name: discord
-  eventSeverity: info
+  # enum: info,error
+  eventSeverity: error
   eventSources:
     - kind: GitRepository
       name: '*'
