Changed event serverity to info

--- a/cluster/base/flux-system/flux-alert.yaml
+++ b/cluster/base/flux-system/flux-alert.yaml
@@ -7,7 +7,7 @@ spec:
   providerRef:
     name: discord
   # enum: info,error
-  eventSeverity: error
+  eventSeverity: info
   eventSources:
     - kind: GitRepository
       name: '*'
