--- a/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
+++ b/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
@@ -233,10 +233,10 @@ spec:
               - targets:
                   - "${PIHOLE_SERVER}:9100"
                   - "${HOME_ASSISTANT_SERVER}:9100"
-    resources:
-      requests:
-        cpu: 100m
-        memory: 128Mi
-      limits:
-        memory: 1Gi
-        cpu: 800m
+#    resources:
+#      requests:
+#        cpu: 100m
+#        memory: 128Mi
+#      limits:
+#        memory: 1Gi
+#        cpu: 800m
