--- a/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
+++ b/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
@@ -95,12 +95,12 @@ spec:
           repeat_interval: 110h
           receiver: "discord_webhook"
           routes:
-            - receiver: "null"
-              match:
+            - match:
                 alertname: Watchdog
-            - receiver: 'discord_webhook'
-              match_re:
+              receiver: 'null'
+            - match_re:
                 severity: critical|warning|error
+              receiver: 'discord_webhook'
               continue: true
         inhibit_rules:
           - source_match:
@@ -233,10 +233,10 @@ spec:
               - targets:
                   - "${PIHOLE_SERVER}:9100"
                   - "${HOME_ASSISTANT_SERVER}:9100"
-#    resources:
-#      requests:
-#        cpu: 100m
-#        memory: 128Mi
-#      limits:
-#        memory: 1Gi
-#        cpu: 800m
+    resources:
+      requests:
+        cpu: 100m
+        memory: 128Mi
+      limits:
+        memory: 1Gi
+        cpu: 800m
