--- a/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
+++ b/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
@@ -96,17 +96,16 @@ spec:
           repeat_interval: 110h
           receiver: "discord_webhook"
           routes:
-            - match:
+            - matchers:
                 alertname: Watchdog
               receiver: 'null'
-            - match_re:
-                severity: critical|warning|error
+            - matchers: [ '{severity=~"(critical|warning|error)"}' ]
               receiver: 'discord_webhook'
               continue: true
         inhibit_rules:
-          - source_match:
+          - source_matchers:
               severity: "critical"
-            target_match:
+            target_matchers:
               severity: "warning"
             equal: ["alertname", "namespace"]
       ingress:
