--- a/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
+++ b/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
@@ -85,7 +85,7 @@ spec:
                   severity: warning
                 annotations:
                   summary: NAS has atleast one security warning
-                  description: "There are security warnings on the NAS to check.\n These can be outdated packages or unsecure settings."
+                  description: "There are security warnings on the NAS to check.\nThese can be outdated packages or unsecure settings."
               - alert: NASUpdateInformation
                 expr: binary_sensor_state{job="home-assistant",entity="binary_sensor.synologynas_update_available"} != 0
                 for: 0m
@@ -94,6 +94,16 @@ spec:
                 annotations:
                   summary: NAS update available
                   description: "The NAS has a new update available."
+              - alert: NASMaxBadSectors
+                expr: binary_sensor_state{domain="binary_sensor",entity=~".*exceeded_max_bad_sectors"} != 0
+                for: 0m
+                labels:
+                  severity: critical
+                annotations:
+                  summary: Hard disk exceeded max bad sectors
+                  description: |-
+                    {{ $labels.friendly_name }}. 
+                    Actions to take: https://kb.synology.com/en-global/DSM/tutorial/How_to_diagnose_drives_health_status_when_receiving_bad_sector_warning
     alertmanager:
       enabled: true
       config:
