Disable throttling alerting rules

--- a/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
+++ b/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
@@ -21,33 +21,12 @@ spec:
       namespace: nfs-system      
   values:
     fullnameOverride: prometheus
-#    defaultRules:
-#      create: true
-#      rules:
-#        alertmanager: true
-#        etcd: false
-#        general: true
-#        k8s: true
-#        kubeApiserver: true
-#        kubeApiserverAvailability: true
-#        kubeApiserverError: true
-#        kubeApiserverSlos: true
-#        kubelet: true
-#        kubePrometheusGeneral: true
-#        kubePrometheusNodeAlerting: true
-#        kubePrometheusNodeRecording: true
-#        kubernetesAbsent: true
-#        kubernetesApps: true
-#        kubernetesResources: true
-#        kubernetesStorage: true
-#        kubernetesSystem: true
-#        kubeScheduler: true
-#        kubeStateMetrics: true
-#        network: true
-#        node: true
-#        prometheus: true
-#        prometheusOperator: true
-#        time: true
+    # Content of default rules: 
+    # https://github.com/prometheus-community/helm-charts/tree/main/charts/kube-prometheus-stack/templates/prometheus/rules-1.14
+    defaultRules:
+      create: true
+      rules:
+        kubernetesResources: false
     additionalPrometheusRulesMap:
       rule-name:
         groups:
