Add k8s-at-home-charts helm repo

--- a/cluster/base/flux-system/kustomization.yaml
+++ b/cluster/base/flux-system/kustomization.yaml
@@ -16,3 +16,4 @@ resources:
   - ./charts/helm/prometheus-community-charts.yaml
   - ./charts/helm/grafana-charts.yaml
   - ./charts/helm/bitnami-charts.yaml
+  - ./charts/helm/k8s-at-home-charts.yaml
