Set UID to 1024

--- a/cluster/apps/default/home-assistant/helm-release.yaml
+++ b/cluster/apps/default/home-assistant/helm-release.yaml
@@ -71,6 +71,12 @@ spec:
         storageClass: "nfs-client"
         size: 8Gi
         mountPath: "/data/"
+      podSecurityContext:
+          enabled: true
+          fsGroup: 1024
+      containerSecurityContext:
+        enabled: true
+        runAsUser: 1024        
     metrics:
       enabled: false
       serviceMonitor:
