--- a/cluster/apps/default/home-assistant/helm-release.yaml
+++ b/cluster/apps/default/home-assistant/helm-release.yaml
@@ -23,14 +23,11 @@ spec:
       tag: 2022.3.5
     env:
       TZ: "Europe/Berlin"
-
-    # -- Configures service settings for the chart. Normally this does not need to be modified.
-    # @default -- See values.yaml
     service:
       main:
         ports:
           http:
-            port: 8123
+            port: 8123      
     ingress:
       main:
         enabled: true
@@ -51,7 +48,10 @@ spec:
             secretName: "hass-tls-secret"
     persistence:
       config:
-        enabled: false
+        enabled: true
+        storageClass: nfs-client
+        accessMode: ReadWriteOnce
+        size: "10Gi"
       usb:
         enabled: false
         type: hostPath
