Enable metrics endpoint

--- a/cluster/apps/default/default-secrets.sops.yaml
+++ b/cluster/apps/default/default-secrets.sops.yaml
@@ -5,10 +5,11 @@ metadata:
     name: default-secrets
     namespace: default
 stringData:
-    postgresql-password: ENC[AES256_GCM,data:esELw4dCLClqTiHgZrFKlw==,iv:p+66LFauwKAQpINsVgZEk6DXeXDu+6fPQI8z517P6hY=,tag:DjTkon79OQjmLT7Ww2HY8w==,type:str]
-    postgresql-postgres-password: ENC[AES256_GCM,data:GOsx9ZGlEt4xKeSQ4G/Fvg==,iv:ZOu2Z/WlLznmGFQZp6Ajq1XErdhsKPcykTcSZhrIE3A=,tag:1q9dlrVByWVsIA6dXXc5Og==,type:str]
-    secret-key: ENC[AES256_GCM,data:lPj85psaLWz7iYj85cNEHQ==,iv:/nPxWqZ9JVC0rkrxu42xdiPrqyuVQSeYkDerWXNzIL4=,tag:huEAScYUIUyHxlbUd1XQ1w==,type:str]
-    HASS_POSTGRESQL_PASSWORD: ENC[AES256_GCM,data:/EJzCSinkQcTMlIrudwl5g==,iv:grX2jtVvsEspiB+bLSUhq/xG2z9V90KHrRCOmm/C0D0=,tag:9lmnM+98TKVx+VUOLtAGWA==,type:str]
+    postgresql-password: ENC[AES256_GCM,data:Dldl6NIZAAu9pkK92j0HkQ==,iv:NWlEN5bRHP+XOZAMwstBAZ+80a0/148C6ZGFA36OT2k=,tag:T4ljabfodULLJBIs6aFKKg==,type:str]
+    postgresql-postgres-password: ENC[AES256_GCM,data:NhzL/z080Kt7eaGlKMxQ+w==,iv:w/3ww3khmASrY9h2tL1g53/F/zUL15UMopSaVXqBPi8=,tag:dMtO54QGIHGmZiMvOWFdoQ==,type:str]
+    secret-key: ENC[AES256_GCM,data:X13q2yhBTVy32+kmLPXp8A==,iv:1K75+hX5FtcOiDG0/4m4WbO6fClPHU7kVMgWh8Y8b90=,tag:wRJjkGGNyR+kzrkdoe5RGQ==,type:str]
+    HASS_POSTGRESQL_PASSWORD: ENC[AES256_GCM,data:E2cexnRDitmoDgHhhESbGQ==,iv:ABT6HDaFHjx7ACgAPUgNnQsPK8EihVZTecv49IZxHCM=,tag:F3Gf8aL1Zy5YNlm0d+OPcg==,type:str]
+    HASS_LLAT: ENC[AES256_GCM,data:R0JluoJTWKZE0FsT9zh1OizAu9Q9LPLGniX9RIEcMcdG2+KC2sRGDoWlagh/5id87mKCdsEGEly3jbEbFGqqLwGdO48IbIUA+wkMuSLMLbDuBjuyzfON2pp5kJXZvhw4+rA2fdve9/tnDotOD+SdX8oW7s+QSvylQxQhKD9MtGcJvrHZNyfIaxyHSjEsLrSMAdBhgUx23Vvc5nZ2jsvrCPkx4acI9Bbf3jXux0QA7yMxWZtt0cKM,iv:irnYm4YBe5Ce94zgkvlX3L0le+xIdOhhGLxTwAsuV4A=,tag:2zn9JOs21Hp4HSGKyKMPIg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -18,14 +19,14 @@ sops:
         - recipient: age1hra9lsurxkx96y9vgckl38ct3x4nkq655nnmfpe2xly93kqypqps0yhwmc
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBpaXVmei9uTkZLTTZpUkt5
-            WXMrUE9VZFVrbnhqd3FBcUkyc0xGYWRDTkdnCnVuL1BaczhHbXhMNWpqbkxwV0FJ
-            WFF3dys5QnZMQStLa1hFUzNGSVZTTEEKLS0tIFE3R0ZRYTNCejZrN0d0azFRb2ht
-            bzNnbCttUEMwakRmTEYxWFZka1JiWmsKmxyppjHReIrNvLRDVOvQGv1gHzK94Vdo
-            EtX9FnXXtFBik1Lt42ADMxgBSeJBIi13WFKQ8iZBLClUcT3Xb++8+A==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBaS0NKVlJ0RVhWRHVyWFN5
+            eUJmbjVkYm80RHR1MVllZTFqNHcydG9QYmpjCk5ZUDdrLzE2L2RPaWJVQTI2L1Zt
+            UXZjYmxjWGYvQVZVM2dBL2tEVlJ3ZGMKLS0tIE9LeW5zM0YrNGQ5dUJGZ3h0UUdh
+            UTZLaHl6NEQwT2UraldoRnVhdm1PUGMKtmOdR1Mq23GGL5sQU6C9GfkIkfBYPyZ5
+            4E8mKttjkL5dKAk7PkqMPiC3kOnJM0K3rnvQ3Xs8kH+2Cs3Rvz4y6g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-03-21T11:13:44Z"
-    mac: ENC[AES256_GCM,data:LxuM5ACOqZc9gtHfBWldQkrQOmwxJLPpoyBIoZpTmROO2dyOdAShjVbGQv3g7QOQleP7WF8hRsNfPa245PJsGtRBAWSjH0+6PL91RUZJEgo0cpcUG2scgld7h4b33iK9ZnEfZ8hT1kDBtRT4VujkrqSdiNAeEOYuez2Z0SVxLmQ=,iv:+lIPLPgbnnR8c8ybmKp/U8TSPzCZm2PdIhtCybYUkLY=,tag:w/FRd6sV9hp8sD+q/z6AVA==,type:str]
+    lastmodified: "2022-03-21T15:09:43Z"
+    mac: ENC[AES256_GCM,data:XdDgGRQbk4iX4zkv3PybtXQBPwYGVbUstmcuAsM+WTElH+zsocHr/GElBbqSGjj+DZkKk1FJTEZdRhEj1RwMBAbkDgZoHP4NGr7FLvL4Dqt4b9D5aAtPzFNOh7Jrr81/C535zbjyRqbGTEIYgVaP5Sc+74D12kx1OkGJQq0vGqc=,iv:ThxsWa1nB19f7Qup4W70h2kiuDg37S1+pr1F3ZdWvPE=,tag:4PZzZ7hxswsCoZNFXlXojw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
