--- a/cluster/apps/default/tandoorrecipes/sts-postgresql.yaml
+++ b/cluster/apps/default/tandoorrecipes/sts-postgresql.yaml
@@ -33,8 +33,8 @@ spec:
         image: postgres:11.5-alpine
         imagePullPolicy: IfNotPresent      
         env:
-        - name: PGDATA
-          value: /var/lib/postgresql/data
+        # - name: PGDATA
+        #   value: /var/lib/postgresql/data
         - name: POSTGRES_USER
           value: recipes
         - name: POSTGRES_PASSWORD
