--- a/cluster/apps/default/tandoorrecipes/sts-postgresql.yaml
+++ b/cluster/apps/default/tandoorrecipes/sts-postgresql.yaml
@@ -88,6 +88,7 @@ spec:
     spec:
       accessModes:
       - ReadWriteOnce
+      storageClassName: nfs-client      
       resources:
         requests:
           storage: 5Gi
