Add cloudflare to cert-manager use letsencrypt

--- a/cluster/apps/default/tandoorrecipes/ingress.yaml
+++ b/cluster/apps/default/tandoorrecipes/ingress.yaml
@@ -3,7 +3,7 @@ kind: Ingress
 metadata:
   annotations:
     kubernetes.io/ingress.class: "traefik"
-    cert-manager.io/cluster-issuer: "selfsigned-cluster-issuer"
+    cert-manager.io/cluster-issuer: "letsencrypt-production"
     hajimari.io/enable: "true"
     hajimari.io/icon: "chef-hat"
     traefik.ingress.kubernetes.io/router.entrypoints: "websecure"    
