--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -5,16 +5,16 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:kJWxd8NTr7Vc,iv:rvZYykTek39JJ6B0LgbEEKesff+CJmKZiEzY+LleMUo=,tag:ojX+yddU0V2Ryg1sOQz5fg==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: null
-    NFS_SERVER: ENC[AES256_GCM,data:8lOEa9VNOE3i7OXvcs4=,iv:GhODJXygCdQEKziiQcAuK0RWmWF140L1ZcH+wH/jNEI=,tag:bqZs09oKcrlYIlrk0dN9xg==,type:str]
-    NFS_PATH: ENC[AES256_GCM,data:X7yRKA+wvcqjNcYP7bP4rA==,iv:8ucpCOFV9lGrHPuqYEdYVtU0zPfwX+9qCuWp0efojEU=,tag:Cq35sg2bfTQ/YFOwWi+Ktg==,type:str]
-    PIHOLE_SERVER: ENC[AES256_GCM,data:mDNxq8xvmx+2Kkt9ykY=,iv:g+kP+RhF5tg5bYs+Mpy821uHIGMCzW8eNMf9ldcZc1Q=,tag:QUbArJ0ADZT2+SniG/uikw==,type:str]
-    HOME_ASSISTANT_SERVER: ENC[AES256_GCM,data:h5XuDtipBU+0N3N3rQ==,iv:/jgPgv1AkP5mx2iOaMCMIa5/y+nOYU3uqdHmHknurQM=,tag:+b772EeET6EaGx2r3SncFg==,type:str]
-    GATEWAY_ADDR: ENC[AES256_GCM,data:X0PImKWP94tOYjp8PQ==,iv:WL2h1MmltfP3X+Bbwr9QXFVvcwCm5UZbnzXX1jFTdrA=,tag:iOalNP/51XI1Fj1FZMsOlg==,type:str]
-    HOME_ASSISTANT_BEARER: ENC[AES256_GCM,data:J5TqUgGZDq1WZL7gg/iSEVdakOMvVySxIEypLF+PDZe+Hu42MekxMLFeoeJ0telr27G0OywgZmJS0f2FeISkogRH313qdt9Jx/QXofB6b68Ez/aqiktVh2cxfomKg0LKhXEydgHBWcLMiMaG2WrrAphfBBbUAHPJsInN5Oe+jXyIH53fIovCqmu7Ci4N00TOaMUJVMilvBzcWgLbxfZNdW5LdKRCK9Y1I6hKI6SUwJ6+5YGct+J4,iv:zwmu9fpTNlxQJptVJSL+9Go1OExGedyGwtwL7nGO/Fc=,tag:R92X1CF7KGfyKSdiEnF5xQ==,type:str]
-    SECRET_GRAFANA_ADMIN_USER: ENC[AES256_GCM,data:FnzZFDs=,iv:qyGtnoSMXunkWCvkusvfIRWuPnMKk+9tzvlhjvO5Ekc=,tag:5zFVTWZbQEwApWbQkx0Mcw==,type:str]
-    SECRET_GRAFANA_ADMIN_PASSWORD: ENC[AES256_GCM,data:y20ITMI7K2vWmH8QAZNakw==,iv:YCzUA+Owp7bUBU1hFAdwvj/V1hQkGvfFyAbS0zkgzrY=,tag:dcZuu6vwRTqiIyTvhTUBhg==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:hquC/vDeEA==,iv:DEOKfZStiDuckJ+L6DkW2seXYj81i2Huh0j6yof5wbc=,tag:ysbOHkJ4AxmIPzRdb51HrQ==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:A5TzBGMcDd/8MODSJs3ac6/n,iv:+zvdrOIzDEPR9KVMCUWEOPiOMvnMe1/3zlkYZa6d5Zg=,tag:YDKic9DAxrjjSWAjYNJx2w==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:fgRqrnDM3CsbjbReGM0=,iv:HrSXhmvKFnBN/CCXNbcPfp2NLFAyrSfXvNuW04dSoKc=,tag:r3BE8TDUB0YbnDJBvAFaeg==,type:str]
+    NFS_PATH: ENC[AES256_GCM,data:jdflNEgxQG720YrH/BGZGg==,iv:3Nuiu7DJd8e6SFccG8irm0Gp1mDarzNuhrZSvftVY9s=,tag:SxdRKiQNm/uCwpb9QX/h9g==,type:str]
+    PIHOLE_SERVER: ENC[AES256_GCM,data:4Ah8gQIf1ZwgVkEJcmQ=,iv:1/vTIXXaHZ1V/eAWlj0C6O6nqCCesE05XFv8peRi48w=,tag:GPabBszgLAy1U4cFhiV/3g==,type:str]
+    HOME_ASSISTANT_SERVER: ENC[AES256_GCM,data:83LEXGLuCBQav2LCmg==,iv:woDU1F/axZkvU6ApQXVTzXEmQDxoWDTKzja7KPxVLxs=,tag:LTqSIUwq2vMgyqd0Vn1JiA==,type:str]
+    GATEWAY_ADDR: ENC[AES256_GCM,data:Z1M88LhpvKVTpd/3cg==,iv:8oyGwG+wvKvathkhrgAa5PVgnVVglquZFCkxzFgiTZg=,tag:m1ACF/Er4fkOQCDr7GF11Q==,type:str]
+    HOME_ASSISTANT_BEARER: ENC[AES256_GCM,data:D+ITbyApJrRdAge8RPHt3M1SQK2gN1xEjLx7vVn+n7cfQhYoSjbvk994V2/Fv2Ma5XSPRe5f84674AmcUy2CUBQC82ZRRhK583ex+VOcPgNHWEE+InAl8H/LCadMhzfwsEgVK1i6UvDidXYplZSLAzntPsWVaQAwbAvVA997SRVwDtB2Zx0KjgLZGkgwFGWC2PRoqQ2ZUTd5rP0vPyCE9Gb4EEidxrS9kH7ckd35F0E5GACxH2HU,iv:MS0ig5c3m3mB74Z2S+6lmS/ozvZSsEwXnmt35aykj70=,tag:7Hjq2kmiMvGYhfuPjmkGKA==,type:str]
+    SECRET_GRAFANA_ADMIN_USER: ENC[AES256_GCM,data:hChpUck=,iv:7rtx2s7plky9hZmznU9jxseMa0JQXvoNKH2y0PO0yXY=,tag:VU2QRdhA9+RxqC03vDz7Dg==,type:str]
+    SECRET_GRAFANA_ADMIN_PASSWORD: ENC[AES256_GCM,data:S1X83ttRB0Wjz/GwESJPtQ==,iv:rvhMchQUrFWFsvnkbR8hTAzfY5BiXfRsAlqM79IqLx4=,tag:2umjmkq2vYXJwPsTa6/ZLg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -24,14 +24,14 @@ sops:
         - recipient: age1hra9lsurxkx96y9vgckl38ct3x4nkq655nnmfpe2xly93kqypqps0yhwmc
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBoRnVBbk9PbTJnSlQreTJ2
-            OXN2dUt3bFIySkhJUTRYcjVmbWRjVmFRaXlrCkFENHlhbUhRQllMMXBPeWpLRkpO
-            YVJuNkxUMmp6eGNYSy90Wm1ET1JHYmMKLS0tIFkwNEw1dEVGNDJ3NjFvOGpvSXU1
-            TmZrVmVVNnZJR21aRWZ3azlmWlpWc0EKO1MT/AhANHKEg29FhjMaeSZP2Ts+YSgQ
-            O2tbnKiyFqO97empvBTLELiRu3lBGs7Ku5Uh22UTJz10uaOkCZ8z5w==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBxSzh0WVBpSGwvbkZTR1hP
+            S2NDT1RWeTA5L3pnVGZuRFI4YkswYm1tampFCmhhcXRnbkJaVVMxeDI4UHdCbmk2
+            cWlyT1FBbVVNS3ZWMGZRbm9QNzFUK0UKLS0tIGtmRGFSZW1xYUxLNUNjRE1CVFc5
+            a0o5cmQvRGVmRENiaVdXam5PNm9FTlUKDyTw8VtanEUSS0M9YzoxkfLwganhA2mv
+            4U3dPVXkvB1BStdKo2nROPYf+PmxwbhSvKaoOC6vteazMb4RAdra3Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2021-12-05T17:39:05Z"
-    mac: ENC[AES256_GCM,data:Yk0yimzF2nP/N5hvY/ITyiS1PAdRR0dtS1Y1ShlvJY+gojesJn7KMqBmZpVvzSRPoL6uoT4h/mKBFgsIaQ0aJ7cDlwpNmitr4aNuDGE1Q3oN8jlrjo0YIagionN3ocW50G32Epoxvv8qUXEulb0cXomuU4dGM3raGi9jwlTkpsE=,iv:MGcLtEjJmzDRYYQIWGahwDYUNRIoo2gkLwSyxvhUT5E=,tag:/eAcX25CSxF/8wa0XVYpkg==,type:str]
+    lastmodified: "2022-03-23T07:40:00Z"
+    mac: ENC[AES256_GCM,data:+1gHr0pbC9oEjD3E29bmWfpBflQ4y+I0AKbj07O3kk10HQveYBRzS2QM0xTqu4EIXiwLg6PLxekGRHVFH6as4UDh0sToWIH9ippPMrD/woMlQoV4V0u/qslaQJFGanRcfG8g/k63H1a8grWdQAgAKXHrN/Tcmh9UrFKRBqi+jLw=,iv:FyBRZQLg0jeXj6FmbTTsClxyfmk1TToQK0qO7u8eMuk=,tag:82fqqIPX6oKxRYyFIXoHNA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
