--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -6,6 +6,7 @@ vars:
     sh: "git rev-parse --show-toplevel"
   CLUSTER_DIR: "{{.PROJECT_DIR}}/cluster"
   ANSIBLE_DIR: "{{.PROJECT_DIR}}/provision/ansible"
+  TERRAFORM_DIR: "{{.PROJECT_DIR}}/provision/terraform"  
 
 env:
   KUBECONFIG: "{{.PROJECT_DIR}}/provision/kubeconfig"
@@ -16,3 +17,4 @@ includes:
   format: .taskfiles/format.yml
   lint: .taskfiles/lint.yml
   pre-commit: .taskfiles/pre-commit.yml
+  terraform: .taskfiles/terraform.yml  
