--- a/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
+++ b/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
@@ -116,7 +116,7 @@ spec:
         ingressClassName: "traefik"
         annotations:
           traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
-          cert-manager.io/cluster-issuer: "selfsigned-cluster-issuer"
+          cert-manager.io/cluster-issuer: "letsencrypt-production"
           cert-manager.io/private-key-secret-name: "root-secret"
           hajimari.io/enable: "true"
           hajimari.io/appName: "Alertmanager"
@@ -185,7 +185,7 @@ spec:
         ingressClassName: "traefik"
         annotations:
           traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
-          cert-manager.io/cluster-issuer: "selfsigned-cluster-issuer"
+          cert-manager.io/cluster-issuer: "letsencrypt-production"
           cert-manager.io/private-key-secret-name: "root-secret"
           hajimari.io/enable: "true"
           hajimari.io/appName: "Prometheus"
