--- a/cluster/core/cert-manager/kustomization.yaml
+++ b/cluster/core/cert-manager/kustomization.yaml
@@ -2,7 +2,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - helm-release.yaml
-  - selfsigned-cluster-issuer.yaml
-  - selfsigned-issuer.yaml
-  - selfsigned-ca.yaml
+  - letsencrypt-production.yaml
+  - secret.sops.yaml
+  # - selfsigned-cluster-issuer.yaml
+  # - selfsigned-issuer.yaml
+  # - selfsigned-ca.yaml
 
