--- a/cluster/core/cert-manager/secret.sops.yaml
+++ b/cluster/core/cert-manager/secret.sops.yaml
@@ -5,7 +5,7 @@ metadata:
     name: cloudflare-api-key
     namespace: cert-manager
 stringData:
-    api-key: null
+    api-key: ENC[AES256_GCM,data:SO6GN0AemOzEXOucjGrSl6RoydRjYQWQDS+38yN+E1XbH4U9Jw==,iv:KRiW0N6Smw6/EyEh0foaDq8sneC6jIHCzk7vGCqxMK4=,tag:4CCfqTLGZ4wlbMO/e4nt5g==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -15,14 +15,14 @@ sops:
         - recipient: age1hra9lsurxkx96y9vgckl38ct3x4nkq655nnmfpe2xly93kqypqps0yhwmc
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB1U3FnUHB3MWswaG1adGU4
-            MUpKWnovNnZCcFJWZEt0MGMrRUFaL2JjT3hzCnl2a243N0FnRVB1aEZCcmZ3eWdi
-            Z3daeVV3cFNJRUJyRzR0cHprb3dCTWcKLS0tIEJmWUZCS1lVc2lUWWpia0NzQ05N
-            eXNBaGp5V0dsQ1pLakprU0NnM3dEOTAKG46YVAGaWce9VvZscmEJQ10gi3DT37sS
-            LMyiRQA7KuQ1tAQkEjWseh4PB9sF1IDAUeXJNVZYEmaiIIpxGN7a9A==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBsMW5STWE0TVpWbys5SzRv
+            ZjZza04yZmhRUEZIRDM0R1Q3bUV6bktmREVrCjd1TUQvbmtkanNScVFjSjl6NWxj
+            eW1VZFRFakgxTGp0eStBdFBCVmJoT0UKLS0tIGRhcWhyNHNZM1lFVkVURWVySVRT
+            enBUV2lPaytNMjQ3U0VWdnBQTzV4TXMKNxzo9JBM2/fqFyWTgWRVcLGcvrpM2tfp
+            XUoD2Py/meQZ0hMy7sACH1VdtGCJyyNTX0dzSa9S8R7ywbOQNZqxaQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2021-11-26T22:30:00Z"
-    mac: ENC[AES256_GCM,data:vkab1Hy1B9jSN1/Ys/lULLpXd1K9b0n4a33Yw1TxjbbDaECf3cTmc+Zqr+Jr1crg3ApMXz2XBiiPsqkhDKib1sFW8igRDs2wMbuMU3knQQxCMSdq7fteObSgdhnDCvSemqR9l/4C0n10rU19pEewp2enZND64kIkBY5DGOkxeDc=,iv:xD6bS6/+Fign9td9IwdgyBDpCgKzivAT0afwaNm7MVY=,tag:PcDq6yFgqqUqlLrxC9TW7g==,type:str]
+    lastmodified: "2022-03-23T07:38:16Z"
+    mac: ENC[AES256_GCM,data:q/7PS042wlnpD4LWgud8okcH8jIBb9Fyd68sJbka0GtMwBdAWnia44qoXvx3Vx3spaPVZQvboom/1Tuuzy1odDDrFuCPl1ZFHrPGwSVHiXzB2lMldl2ANeSo8/CKhH/78MRh8ARiY0/Bcd2xhrjpQNEXCPjvTr6Ijw4Z+orztkg=,iv:fxINDRrnFkD/226qKxMtvDTFJTJI+OrSeJS9lwacEwM=,tag:7IaQ+o+5z4dVG5KF6qERJA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
