--- a/cluster/apps/default/home-assistant/helm-release.yaml
+++ b/cluster/apps/default/home-assistant/helm-release.yaml
@@ -98,13 +98,45 @@ spec:
         labels: {}
         # -- Configure additionial rules for the chart under this key.
         # @default -- See prometheusrules.yaml
-        rules: []
-          # - alert: HomeAssistantAbsent
-          #   annotations:
-          #     description: Home Assistant has disappeared from Prometheus service discovery.
-          #     summary: Home Assistant is down.
-          #   expr: |
-          #     absent(up{job=~".*home-assistant.*"} == 1)
-          #   for: 5m
-          #   labels:
-          #     severity: critical
+        rules:
+          - alert: HomeAssistantAbsent
+            annotations:
+              description: Home Assistant has disappeared from Prometheus service discovery.
+              summary: Home Assistant is down.
+            expr: |
+              absent(up{job=~".*home-assistant.*"} == 1)
+            for: 5m
+            labels:
+              severity: critical
+          - alert: SensorBatteryLevel
+            annotations:
+              summary: Battery low for entity {{ $labels.friendly_name }}
+              description: "An entity is low on battery\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"
+            expr: |
+              homeassistant_sensor_battery_percent{entity=~"(sensor.ts.*|sensor.hue.*)"} < 90
+          - alert: NASSecurityStatus
+            expr: homeassistant_binary_sensor_state{job="home-assistant",entity="binary_sensor.synologynas_security_status"} != 0
+            for: 0m
+            labels:
+              severity: warning
+            annotations:
+              summary: NAS has atleast one security warning
+              description: "There are security warnings on the NAS to check.\nThese can be outdated packages or unsecure settings."
+          - alert: NASUpdateInformation
+            expr: homeassistant_binary_sensor_state{job="home-assistant",entity="binary_sensor.synologynas_update_available"} != 0
+            for: 0m
+            labels:
+              severity: warning
+            annotations:
+              summary: NAS update available
+              description: "The NAS has a new update available."
+          - alert: NASMaxBadSectors
+            expr: homeassistant_binary_sensor_state{domain="binary_sensor",entity=~".*exceeded_max_bad_sectors"} != 0
+            for: 0m
+            labels:
+              severity: critical
+            annotations:
+              summary: Hard disk exceeded max bad sectors
+              description: |-
+                {{ $labels.friendly_name }}. 
+                Actions to take: https://kb.synology.com/en-global/DSM/tutorial/How_to_diagnose_drives_health_status_when_receiving_bad_sector_warning              
