--- a/cluster/apps/networking/traefik/external-services/nas.yaml
+++ b/cluster/apps/networking/traefik/external-services/nas.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: nas-external
+  namespace: networking
 spec:
   ports:
   - name: app
@@ -15,6 +16,7 @@ apiVersion: v1
 kind: Endpoints
 metadata:
   name: nas-external
+  namespace: networking
 subsets:
 - addresses:
   - ip: ${NFS_SERVER}
