--- a/cluster/apps/networking/traefik/external-services/pihole.yaml
+++ b/cluster/apps/networking/traefik/external-services/pihole.yaml
@@ -1,55 +1,55 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nas-external
+  name: pihole-external
   namespace: networking
 spec:
   ports:
   - name: app
     port: 80
     protocol: TCP
-    targetPort: 5000
+    targetPort: 80
   clusterIP: None
   type: ClusterIP
 ---
 apiVersion: v1
 kind: Endpoints
 metadata:
-  name: nas-external
+  name: pihole-external
   namespace: networking
 subsets:
 - addresses:
-  - ip: ${NFS_SERVER}
+  - ip: ${PIHOLE_SERVER}
   ports:
   - name: app
-    port: 5000
+    port: 80
     protocol: TCP
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: nas-ingress
+  name: pihole-ingress
   namespace: networking
   annotations:
     cert-manager.io/cluster-issuer: "letsencrypt-production"
-    hajimari.io/appName: "NAS"
+    hajimari.io/appName: "PiHole"
     hajimari.io/enable: "true"
-    hajimari.io/icon: "nas"
+    hajimari.io/icon: "pi-hole"
     traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
 spec:
   ingressClassName: "traefik"
   tls:
     - hosts:
-        - "nas.${SECRET_DOMAIN}"
-      secretName: "nas-ingress-tls"
+        - "pihole.${SECRET_DOMAIN}"
+      secretName: "pihole-ingress-tls"
   rules:
-    - host: "nas.${SECRET_DOMAIN}"
+    - host: "pihole.${SECRET_DOMAIN}"
       http:
         paths:
           - path: /
             pathType: Prefix
             backend:
               service:
-                name: nas-external
+                name: pihole-external
                 port:
                   number: 80
