Add external service

--- a/cluster/apps/default/hajimari/helm-release.yaml
+++ b/cluster/apps/default/hajimari/helm-release.yaml
@@ -31,10 +31,7 @@ spec:
           - networking
           - monitoring
       name: "you"
-      customApps:
-        - name: Router
-          url: "http://${GATEWAY_ADDR}"
-          icon: router-wireless
+      customApps: []
       groups:
         - name: Tech
           links:
